# angrybirds-fusion-toolkit

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml  README.md
core/src/: compress.rs  constants.rs  crypto.rs  dat.rs  errors.rs  lib.rs  luac.rs  zstream.rs
scripts/: batch.ps1  batch.sh
shell/: Cargo.toml
shell/src/: cli.rs  main.rs
