[package]
name = "angrybirds-fusion-core"
version = "0.4.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Core library for Angry Birds Fusion Toolkit"

[dependencies]
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
thiserror = "2"
log = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
unluac = "=1.3.0"

# Compression support
sevenz-rust2 = "0.21"
lzma-rust2 = "0.16"
