[package]
name = "angrybirds-fusion-shell"
version = "0.4.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Shell frontend for Angry Birds Fusion Toolkit"

[[bin]]
name = "angrybirds-fusion-toolkit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0.100"

log = { workspace = true }
env_logger = { workspace = true }

angrybirds-fusion-core = { path = "../core" }
